# med-agent-pro

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
data/: medical_guide.txt
go-gateway/: Dockerfile  go.mod  main.go  main_test.go
python-service/: .env.example  Dockerfile  main.py  pyproject.toml  rag_engine.py
python-service/tests/: conftest.py  test_main.py
